# UUMCdata

./: AnalysisPlotting.py  CausalModel.py  ChecksErrors.py  Data.py  DataGeneration.py  README.md  UDG.ipynb  UUMC.ipynb  UnitlessDataGeneration.py  example.ipynb  pyproject.toml
.github/workflows/: build_release_package.yml
UUMCdata/: CausalModel.py  ChecksErrors.py  Data.py  __init__.py
examples/: AnalysisPlotting.py  UUMC.ipynb  example.ipynb
